Update referral link to GitHub Pages

--- a/indexApp.html
+++ b/indexApp.html
@@ -1135,7 +1135,7 @@
 
         function copyRef() {
             const code = document.getElementById('myRefCode').innerText;
-            const link = `https://my-ruede-app.netlify.app/indexApp.html?ref=${code}`;
+            const link = `https://supachai2001774.github.io/my-crypto-app/indexApp.html?ref=${code}`;
             navigator.clipboard.writeText(link);
             
             // Toast Notification
