Update SW cache version and fix title

--- a/indexApp.html
+++ b/indexApp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Crypto Miner1222</title>
+    <title>Crypto Miner Tycoon</title>
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3067/3067789.png">
     <meta name="theme-color" content="#4e54c8">
