inital commit and add

--- a/Admin.html
+++ b/Admin.html
@@ -280,6 +280,21 @@
 
         <div id="referrals" class="section">
             <h2>จัดการแนะนำเพื่อน</h2>
+            
+            <div class="card" style="background: linear-gradient(135deg, #6c5ce7, #a29bfe); color: white;">
+                <div style="display: flex; justify-content: space-between; align-items: center;">
+                    <div>
+                        <div style="font-size: 0.9rem; opacity: 0.9;">ลิงก์แนะนำเพื่อนใหม่ (Invite Link)</div>
+                        <div style="font-size: 1.1rem; font-weight: bold; margin-top: 5px; background: rgba(0,0,0,0.2); padding: 8px 15px; border-radius: 8px; display: inline-block;">
+                            https://supachai2001774.github.io/my-crypto-app/indexApp.html
+                        </div>
+                    </div>
+                    <button onclick="navigator.clipboard.writeText('https://supachai2001774.github.io/my-crypto-app/indexApp.html'); alert('คัดลอกลิงก์แล้ว')" class="btn-sm" style="background: white; color: #6c5ce7; font-weight: bold; padding: 10px 20px; font-size: 1rem;">
+                        <i class="fas fa-copy"></i> คัดลอก
+                    </button>
+                </div>
+            </div>
+
             <div class="card">
                 <div style="display: flex; gap: 15px; margin-bottom: 20px;">
                     <div style="flex: 1; background: #0f172a; padding: 15px; border-radius: 10px; border: 1px solid #334155; display: flex; align-items: center; gap: 15px;">
