inital commit and add

--- a/indexApp.html
+++ b/indexApp.html
@@ -455,7 +455,7 @@
                 setTimeout(() => {
                     if(log) log.innerText = "> " + msg;
                 }, delay);
-                delay += (Math.random() * 800) + 400;
+                delay += (Math.random() * 200) + 100; // Reduced from 800+400 to 200+100
             });
 
             setTimeout(() => {
