--- a/indexApp.html
+++ b/indexApp.html
@@ -13,17 +13,10 @@
 </head>
 <body>
 
-    <div id="maintenanceOverlay">
+    <div id="maintenanceOverlay" style="display: none;">
         <i class="fas fa-tools" style="font-size: 4rem; color: #ff7675; margin-bottom: 20px;"></i>
         <h2>ปิดปรับปรุงระบบ</h2>
         <p id="maintMessage" style="color: #aaa; text-align: center; max-width: 80%;">กำลังอัปเกรดเซิร์ฟเวอร์...</p>
-    </div>
-
-    <div id="connectionOverlay" style="display: flex; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #090b1e; z-index: 9998; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
-        <div style="width: 80px; height: 80px; border: 4px solid rgba(108, 92, 231, 0.2); border-top: 4px solid #6c5ce7; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 20px;"></div>
-        <h3 style="color: white; margin: 0;">Connecting to VPS...</h3>
-        <div style="color: #aaa; font-size: 0.8rem; margin-top: 5px;">Establishing secure connection</div>
-        <div id="connectionLog" style="margin-top: 20px; color: #00cec9; font-family: monospace; font-size: 0.7rem; height: 20px;">Initializing...</div>
     </div>
 
     <div class="app-container">
@@ -47,8 +40,8 @@
                     <div class="core-circle"><i class="fas fa-microchip" style="font-size: 1.5rem;"></i></div>
                 </div>
                 <div>
-                    <div style="color: var(--accent); font-weight: bold; font-size: 1.2rem;">VPS Cloud Mining</div>
-                    <div style="font-size: 0.8rem; color: #aaa;">สถานะ: <span id="miningStatus" style="color:#00b894;">Online (VPS)</span></div>
+                    <div style="color: var(--accent); font-weight: bold; font-size: 1.2rem;">AI Mining Core</div>
+                    <div style="font-size: 0.8rem; color: #aaa;">สถานะ: <span id="miningStatus" style="color:#00b894;">Online</span></div>
                     <div style="font-size: 0.9rem; margin-top: 5px;">กำลังขุด: <span id="hashrateDisplay">0.0</span> MH/s</div>
                 </div>
             </div>
@@ -217,30 +210,8 @@
                     <span class="slider"></span>
                 </label>
             </div>
-
-            <!-- Live Monitor -->
-            <div class="switch-group">
-                <div>
-                    <div class="switch-label"><i class="fas fa-terminal" style="width:20px;"></i> แสดงหน้าจอ VPS</div>
-                    <div class="switch-sub">Live VPS Monitor</div>
-                </div>
-                <label class="toggle-switch">
-                    <input type="checkbox" id="swMonitor" onchange="saveSystemSetting('monitor_enabled', this.checked)">
-                    <span class="slider"></span>
-                </label>
-            </div>
         </div>
 
-    </div>
-
-    <div id="liveMonitor">
-        <div style="border-bottom: 1px solid #00cec9; padding-bottom: 5px; margin-bottom: 5px; font-weight: bold; display: flex; justify-content: space-between;">
-            <span><i class="fas fa-network-wired"></i> VPS LIVE</span>
-            <span style="animation: pulse 1s infinite; color: #00cec9;">●</span>
-        </div>
-        <div id="liveMonitorContent" style="height: 80px; overflow: hidden; display: flex; flex-direction: column; justify-content: flex-end;">
-            <!-- Logs go here -->
-        </div>
     </div>
 
     <div class="bottom-nav">
@@ -439,32 +410,6 @@
         };
 
         function initApp() {
-            // VPS Connection Simulation
-            const overlay = document.getElementById('connectionOverlay');
-            const log = document.getElementById('connectionLog');
-            const logs = [
-                "Resolving host address...",
-                "Connecting to secure server (VPS)...",
-                "Authenticating user...",
-                "Syncing data with cloud database...",
-                "Connection established."
-            ];
-
-            let delay = 0;
-            logs.forEach((msg, i) => {
-                setTimeout(() => {
-                    if(log) log.innerText = "> " + msg;
-                }, delay);
-                delay += 50; // Very fast: 50ms per log
-            });
-
-            setTimeout(() => {
-                if(overlay) {
-                    overlay.style.opacity = '0';
-                    setTimeout(() => overlay.style.display = 'none', 200); // Faster fade out
-                }
-            }, delay + 200);
-
             // Default Announcement
             if(!localStorage.getItem('mining_announcement')) {
                 const defaultAnn = { msg: 'ยินดีต้อนรับสู่ Crypto Miner Tycoon!', date: new Date().toISOString() };
