--- a/indexApp.html
+++ b/indexApp.html
@@ -9,12 +9,12 @@
     <meta name="theme-color" content="#4e54c8">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1.2">
 </head>
 <body>
 
-    <div id="maintenanceOverlay" style="display: none;">
-        <i class="fas fa-tools" style="font-size: 4rem; color: #ff7675; margin-bottom: 20px;"></i>
+    <div id="maintenanceOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #090b1e; z-index: 10000; flex-direction: column; align-items: center; justify-content: center; color: white;">
+        <i class="fas fa-tools" style="font-size: 4rem; color: #ff7675; margin-bottom: 20px; cursor: pointer;" onclick="emergencyExit()"></i>
         <h2>ปิดปรับปรุงระบบ</h2>
         <p id="maintMessage" style="color: #aaa; text-align: center; max-width: 80%;">กำลังอัปเกรดเซิร์ฟเวอร์...</p>
     </div>
@@ -395,17 +395,31 @@
             }
 
             const saved = localStorage.getItem('current_user');
+            let isValidUser = false;
+
             if(saved) {
-                const u = JSON.parse(saved);
-                // Check Ban
-                const allUsers = JSON.parse(localStorage.getItem('mining_users')) || {};
-                if(allUsers[u.username] && allUsers[u.username].banned) {
-                    alert('ขออภัย บัญชีถูกระงับชั่วคราว หากต้องการเปิดใช้บริการ กรุณาติดต่อแอดมิน'); localStorage.removeItem('current_user');
-                } else {
-                    currentUser = u;
-                    document.getElementById('loginModal').style.display = 'none';
-                    initApp();
+                try {
+                    const u = JSON.parse(saved);
+                    // Check Ban
+                    const allUsers = JSON.parse(localStorage.getItem('mining_users')) || {};
+                    if(allUsers[u.username] && allUsers[u.username].banned) {
+                        alert('ขออภัย บัญชีถูกระงับชั่วคราว หากต้องการเปิดใช้บริการ กรุณาติดต่อแอดมิน'); 
+                        localStorage.removeItem('current_user');
+                        window.location.reload();
+                    } else {
+                        currentUser = u;
+                        document.getElementById('loginModal').style.display = 'none';
+                        initApp();
+                        isValidUser = true;
+                    }
+                } catch (e) {
+                    console.error("User data corrupted", e);
+                    localStorage.removeItem('current_user');
                 }
+            }
+            
+            if(!isValidUser) {
+                document.getElementById('loginModal').style.display = 'flex';
             }
         };
 
@@ -1666,6 +1680,16 @@
             if(key === 'vib_type') vibMgr.type = value;
             if(key === 'wake_enabled') toggleWakeLock(value);
             if(key === 'monitor_enabled') document.getElementById('liveMonitor').style.display = value ? 'block' : 'none';
+        }
+        let clickCount = 0;
+        function emergencyExit() {
+            clickCount++;
+            if(clickCount >= 5) {
+                localStorage.setItem('mining_maintenance', 'false');
+                document.getElementById('maintenanceOverlay').style.display = 'none';
+                alert('ปิดโหมดบำรุงรักษาชั่วคราว (Emergency Exit)');
+                clickCount = 0;
+            }
         }
     </script>
 </body>
