inital commit and add

--- a/indexApp.html
+++ b/indexApp.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- 
+    SYSTEM: Crypto Miner Tycoon
+    BACKEND: Hybrid (LocalStorage / MySQL Ready)
+    DATABASE SCHEMA: See database.sql
+-->
 <html lang="th">
 <head>
     <meta charset="UTF-8">
