--- a/indexApp.html
+++ b/indexApp.html
@@ -52,7 +52,7 @@
             <i class="fas fa-microchip maint-icon" onclick="emergencyExit()"></i>
             <div class="maint-title">ระบบออฟไลน์</div>
             <div style="color: #00f2ff; font-size: 1.2rem; margin-bottom: 10px; font-weight: bold;">ปิดปรับปรุงระบบชั่วคราว</div>
-            <p id="maintMessage" class="maint-desc">กำลังอัปเกรดระบบเพื่อประสิทธิภาพที่ดียิ่งขึ้น<br>กรุณารอสักครู่...</p>
+            <p id="maintMessage" class="maint-desc">กำลังอัปเกรดระบบเพื่อประสิทธิภาพที่ดียิ่งขึ้น<br>กรุณารอสักครู่..</p>
             <div style="margin-top: 20px; font-size: 0.8rem; color: rgba(0, 242, 255, 0.5);">ระบบความปลอดภัย AI: ทำงาน</div>
         </div>
     </div>
