--- a/indexApp.html
+++ b/indexApp.html
@@ -213,6 +213,16 @@
                 </div>
                 <div id="activeContractsList" style="display: flex; flex-direction: column; gap: 10px;"></div>
             </div>
+
+            <!-- Server Status -->
+            <div style="margin-top: 20px; padding: 15px; background: rgba(0,0,0,0.3); border-radius: 10px; border: 1px solid var(--border); margin-bottom: 80px;">
+                <div style="font-size: 0.7rem; color: var(--text-muted); margin-bottom: 8px;">สถานะเซิร์ฟเวอร์</div>
+                <div style="display: flex; align-items: center; gap: 8px;">
+                    <div style="width: 8px; height: 8px; background: var(--success); border-radius: 50%; box-shadow: 0 0 8px var(--success); animation: pulse 2s infinite;"></div>
+                    <span style="color: var(--success); font-weight: bold; font-size: 0.9rem;">LIVE SYSTEM</span>
+                </div>
+                <div style="font-size: 0.65rem; color: #aaa; margin-top: 5px;">MySQL Ready (Mode: Hybrid)</div>
+            </div>
         </div>
 
         <div class="page" id="shopPage">
