Update admin panel and ensure referral code input is present

--- a/admin.html
+++ b/admin.html
@@ -297,6 +297,25 @@
 
     <div class="content">
         
+        <!-- Top Header -->
+        <div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 20px; padding-bottom: 15px; border-bottom: 1px solid rgba(255,255,255,0.05);">
+            <a href="indexApp.html" target="_blank" style="text-decoration: none; margin-right: 20px;">
+                <button style="background: #10b981; color: white; border: none; padding: 10px 20px; border-radius: 8px; display: flex; align-items: center; gap: 8px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3); transition: 0.3s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">
+                    <i class="fas fa-globe"></i> ไปหน้าแอป
+                </button>
+            </a>
+
+            <div style="display: flex; align-items: center; gap: 12px;">
+                <div style="width: 40px; height: 40px; background: var(--success); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; color: #000; font-size: 1.2rem; box-shadow: 0 0 10px rgba(0, 255, 157, 0.3);">
+                    A
+                </div>
+                <div style="text-align: left;">
+                    <div style="font-weight: bold; font-size: 1rem; color: white; line-height: 1.2;">Admin</div>
+                    <div style="font-size: 0.75rem; color: var(--text-muted);">ผู้ดูแลระบบ</div>
+                </div>
+            </div>
+        </div>
+
         <!-- Dashboard -->
         <div id="dashboard" class="section active">
             <h2><i class="fas fa-tachometer-alt"></i> ภาพรวม</h2>
