--- a/admin.html
+++ b/admin.html
@@ -299,7 +299,7 @@
         
         <!-- Top Header -->
         <div style="display: flex; justify-content: flex-end; align-items: center; margin-bottom: 20px; padding-bottom: 15px; border-bottom: 1px solid rgba(255,255,255,0.05);">
-            <a href="indexApp.html" target="_blank" style="text-decoration: none; margin-right: 20px;">
+            <a href="index.html" target="_blank" style="text-decoration: none; margin-right: 20px;">
                 <button style="background: #10b981; color: white; border: none; padding: 10px 20px; border-radius: 8px; display: flex; align-items: center; gap: 8px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3); transition: 0.3s;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='translateY(0)'">
                     <i class="fas fa-globe"></i> ไปหน้าแอป
                 </button>
