--- a/admin.html
+++ b/admin.html
@@ -253,6 +253,67 @@
             .overlay.show { display: block; }
         }
         .menu-toggle { display: none; }
+
+        /* Changelog Timeline */
+        .changelog-timeline {
+            position: relative;
+            padding: 20px 0;
+        }
+        .changelog-timeline::before {
+            content: '';
+            position: absolute;
+            left: 20px;
+            top: 0;
+            bottom: 0;
+            width: 3px;
+            background: var(--border);
+        }
+        .changelog-item {
+            position: relative;
+            margin-left: 50px;
+            margin-bottom: 30px;
+            padding: 15px;
+            background: var(--glass);
+            border-radius: 8px;
+            border: 1px solid var(--border);
+        }
+        .changelog-item::before {
+            content: '';
+            position: absolute;
+            left: -39px;
+            top: 18px;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: var(--primary);
+            border: 3px solid var(--bg-panel);
+            box-shadow: 0 0 10px var(--primary);
+        }
+        .changelog-item h4 {
+            margin: 0 0 10px 0;
+            color: var(--primary);
+        }
+        .changelog-item p {
+            margin: 0;
+            color: var(--text-muted);
+            font-size: 0.9rem;
+        }
+        .changelog-date {
+            font-size: 0.8rem;
+            color: var(--text-muted);
+            margin-bottom: 5px;
+        }
+        .changelog-tag {
+            display: inline-block;
+            padding: 3px 8px;
+            border-radius: 5px;
+            font-size: 0.75rem;
+            font-weight: bold;
+            margin-right: 8px;
+        }
+        .tag-fix { background: #ff0055; color: white; }
+        .tag-feat { background: #00f2ff; color: #050510; }
+        .tag-perf { background: #7000ff; color: white; }
     </style>
 </head>
 <body>
@@ -284,6 +345,7 @@
             <span id="navTransBadge" class="nav-badge" style="display:none;">0</span>
         </div>
         <div class="menu-item" onclick="nav('announce', this)"><i class="fas fa-bullhorn"></i> ระบบ</div>
+        <div class="menu-item" onclick="nav('updates', this)"><i class="fas fa-history"></i> ประวัติอัปเดต</div>
 
         <div style="margin-top: auto; padding: 15px; background: rgba(0,0,0,0.3); border-radius: 10px; border: 1px solid var(--border);">
             <div style="font-size: 0.7rem; color: var(--text-muted); margin-bottom: 8px;">สถานะเซิร์ฟเวอร์</div>
@@ -377,6 +439,31 @@
 
         <!-- Monitor (Live Alert System) -->
         <div id="monitor" class="section">
+
+        <!-- Software Updates -->
+        <div id="updates" class="section">
+            <h2><i class="fas fa-history"></i> ประวัติการอัปเดตซอฟต์แวร์</h2>
+            <div class="card">
+                <div class="changelog-timeline">
+                    <!-- Items will be added here -->
+                    <div class="changelog-item">
+                        <div class="changelog-date">December 5, 2025</div>
+                        <h4><span class="changelog-tag tag-feat">ฟีเจอร์</span>เพิ่มประวัติการอัปเดต</h4>
+                        <p>เพิ่มหน้าสำหรับติดตามการเปลี่ยนแปลงและอัปเดตล่าสุดของระบบในหน้าแอดมิน</p>
+                    </div>
+                    <div class="changelog-item">
+                        <div class="changelog-date">December 5, 2025</div>
+                        <h4><span class="changelog-tag tag-fix">แก้ไข</span>ปรับปรุง Title ของหน้าแอดมิน</h4>
+                        <p>ลบช่องว่างที่ไม่จำเป็นออกจาก Title ของหน้า Admin Panel เพื่อความถูกต้อง</p>
+                    </div>
+                    <div class="changelog-item">
+                        <div class="changelog-date">December 5, 2025</div>
+                        <h4><span class="changelog-tag tag-perf">ปรับปรุง</span>เพิ่มขีดจำกัดการอัปโหลดไฟล์</h4>
+                        <p>แก้ไขปัญหาการอัปโหลดสลิป โดยเพิ่มขีดจำกัดขนาดไฟล์ที่รองรับเป็น 50MB</p>
+                    </div>
+                </div>
+            </div>
+        </div>
             <div style="display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--border); padding-bottom: 15px; margin-bottom: 20px;">
                 <h2 style="border: none; margin: 0;"><i class="fas fa-satellite-dish"></i> ศูนย์ควบคุมสด (Live Command)</h2>
                 <div style="display: flex; align-items: center; gap: 10px;">
