--- a/admin.html
+++ b/admin.html
@@ -344,8 +344,25 @@
             <i class="fas fa-exchange-alt"></i> ธุรกรรม 
             <span id="navTransBadge" class="nav-badge" style="display:none;">0</span>
         </div>
-        <div class="menu-item" onclick="nav('announce', this)"><i class="fas fa-bullhorn"></i> ระบบ</div>
+        <div class="menu-item" onclick="nav('settings', this)"><i class="fas fa-cogs"></i> ตั้งค่าระบบ</div>
         <div class="menu-item" onclick="nav('updates', this)"><i class="fas fa-history"></i> ประวัติอัปเดต</div>
+
+        <div id="settings" class="section">
+            <h2><i class="fas fa-cogs"></i> ตั้งค่าระบบ</h2>
+            <div class="card">
+                <h3 style="margin-top: 0;">การตั้งค่าทั่วไป</h3>
+                <div style="display: flex; justify-content: space-between; align-items: center; padding: 15px; background: var(--glass); border-radius: 8px;">
+                    <div>
+                        <h4 style="margin: 0; color: var(--warning);"><i class="fas fa-tools"></i> โหมดบำรุงรักษา</h4>
+                        <p style="margin: 5px 0 0; color: var(--text-muted); font-size: 0.9rem;">เมื่อเปิดใช้งาน ผู้ใช้ทั่วไปจะไม่สามารถเข้าสู่ระบบได้</p>
+                    </div>
+                    <label class="switch">
+                        <input type="checkbox" id="maintenanceModeSwitch">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
 
         <div style="margin-top: auto; padding: 15px; background: rgba(0,0,0,0.3); border-radius: 10px; border: 1px solid var(--border);">
             <div style="font-size: 0.7rem; color: var(--text-muted); margin-bottom: 8px;">สถานะเซิร์ฟเวอร์</div>
@@ -825,6 +842,10 @@
             if (!target) {
                 console.error('Section not found:', id);
                 return;
+            }
+
+            if (id === 'settings') {
+                loadSystemSettings();
             }
 
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
@@ -1871,6 +1892,43 @@
             sidebar.classList.toggle('show');
             overlay.classList.toggle('show');
         }
+
+
+        async function loadSystemSettings() {
+            try {
+                const response = await fetch('/api/admin/settings');
+                const settings = await response.json();
+                document.getElementById('maintenanceModeSwitch').checked = settings.maintenance;
+            } catch (error) {
+                console.error('Error loading system settings:', error);
+                showToast('เกิดข้อผิดพลาดในการโหลดการตั้งค่า', 'error');
+            }
+        }
+
+        async function saveSystemSettings() {
+            const maintenanceMode = document.getElementById('maintenanceModeSwitch').checked;
+            try {
+                const response = await fetch('/api/admin/settings', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ maintenance: maintenanceMode }),
+                });
+                if (response.ok) {
+                    showToast('บันทึกการตั้งค่าแล้ว', 'success');
+                } else {
+                    throw new Error('Failed to save settings');
+                }
+            } catch (error) {
+                console.error('Error saving system settings:', error);
+                showToast('เกิดข้อผิดพลาดในการบันทึกการตั้งค่า', 'error');
+                // Revert the switch state on error
+                document.getElementById('maintenanceModeSwitch').checked = !maintenanceMode;
+            }
+        }
+
+        document.getElementById('maintenanceModeSwitch').addEventListener('change', saveSystemSettings);
 
     </script>
 </body>
